@@ -24,6 +24,7 @@ xs/ClutterModelDefault.xs
 xs/ClutterRectangle.xs
 xs/ClutterScore.xs
 xs/ClutterScript.xs
+xs/ClutterShader.xs
 xs/ClutterStage.xs
 xs/ClutterTexture.xs
 xs/ClutterTimeline.xs
